# unboxing

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile.am  README.md  README.org  autogen.sh  configure.ac  doxygen.dox
.github/workflows/: CI.yml  master.yml
inc/boxing/: config.h  filter.h  image8.h  log.h  metadata.h  string.h  unboxer.h  unboxer_utility.h  viewport.h
inc/boxing/codecs/: bchcodec.h  ldpccodec.h
inc/boxing/graphics/: painter.h
inc/boxing/math/: crc32.h  crc64.h
inc/boxing/platform/: memory.h  types.h
inc/boxing/unboxer/: histogramutils.h
src/: Makefile.am  config.c  image8.c  matrix.c  metadata.c  string.c  unboxer.c  unboxer_utility.c  utils.c  viewport.c
src/base/: math_crc32.c  math_crc64.c
src/codecs/: 2dpam.c  bchcodec.c  cipher.c  codecbase.c  codecdispatcher.c  crc32.c  crc64.c  ftfinterleaving.c  interleaving.c  ldpccodec.c  modulator.c  packetheader.c  reedsolomon.c  symbolconverter.c  syncpointinserter.c
src/frame/: 2polinomialsampler.c  areasampler.c  bicubicsampler.c  bilinearsampler.c  sampler.c  trackergpf.c  trackergpf_1.c
src/graphics/: border.c  component.c  genericframe.c  genericframefactory.c  genericframegpf_1.c  image8paintdevice.c  label.c  painter.c
src/math/: dsp.c
src/platform/: memory.c
src/unboxer/: adaptive_filter.c  adaptive_filter.h  datapoints.c  datapoints.h  filter.c  frametrackerutil.c  frameutil.c  frameutil.h  histogramutils.c  horizontalmeasures.c  syncpoints.c  unboxerv1.c  unboxerv1.h
tests/: Makefile.am
tests/static_unboxer/: Makefile.am  dataframe.h  main.c
tests/testutils/inc/: boxing_config.h  unboxingutility.h  unittests.h
tests/testutils/src/: boxing_config.c  config_source_4kv11.h  config_source_4kv9.h  unboxingutility.c
tests/unboxer/: Makefile.am  main.c
tests/unboxingdata/: Makefile.am  configtests.c  crctests.c  image8tests.c  mathtests.c  matrixtests.c  metadatatests.c  stringtests.c
