AM_CFLAGS = $(all_includes)

SUBDIRS = src tests

boxingincludedir = $(includedir)/boxing
boxinginclude_HEADERS = \
    inc/boxing/filter.h \
    inc/boxing/globals.h \
    inc/boxing/utils.h \
    inc/boxing/config.h \
    inc/boxing/stats.h \
    inc/boxing/log.h \
    inc/boxing/unboxer.h \
    inc/boxing/unboxer_utility.h \
    inc/boxing/bool.h \
    inc/boxing/matrix.h \
    inc/boxing/image8.h \
    inc/boxing/string.h \
    inc/boxing/metadata.h 

boxingmathincludedir = $(includedir)/boxing/math
boxingmathinclude_HEADERS = \
    inc/boxing/math/crc32.h \
    inc/boxing/math/crc64.h \
    inc/boxing/math/bitutils.h \
    inc/boxing/math/dsp.h \
    inc/boxing/math/math.h 

boxingcodecsincludedir = $(includedir)/boxing/codecs
boxingcodecsinclude_HEADERS = \
    inc/boxing/codecs/packetheader.h \
    inc/boxing/codecs/crc32.h \
    inc/boxing/codecs/bchcodec.h \
    inc/boxing/codecs/codecdispatcher.h \
    inc/boxing/codecs/ftfinterleaving.h \
    inc/boxing/codecs/codecbase.h \
    inc/boxing/codecs/crc64.h \
    inc/boxing/codecs/2dpam.h \
    inc/boxing/codecs/codec_cb.h \
    inc/boxing/codecs/modulator.h \
    inc/boxing/codecs/syncpointinserter.h \
    inc/boxing/codecs/interleaving.h \
    inc/boxing/codecs/symbolconverter.h \
    inc/boxing/codecs/cipher.h \
    inc/boxing/codecs/reedsolomon.h \
    inc/boxing/codecs/ldpccodec.h

unboxercodecsincludedir = $(includedir)/boxing/unboxer
unboxercodecsinclude_HEADERS = \
    inc/boxing/unboxer/abstractframeutil.h \
    inc/boxing/unboxer/cornermark.h \
    inc/boxing/unboxer/sampleutil.h \
    inc/boxing/unboxer/syncpoints.h \
    inc/boxing/unboxer/histogramutils.h \
    inc/boxing/unboxer/frametrackerutil.h \
    inc/boxing/unboxer/sampler.h

boxingplatformincludedir = $(includedir)/boxing/platform
boxingplatforminclude_HEADERS = \
    inc/boxing/platform/platform.h \
    inc/boxing/platform/types.h

boxingframeincludedir = $(includedir)/boxing/frame
boxingframeinclude_HEADERS = \
    inc/boxing/frame/trackercbgpf_1.h \
    inc/boxing/frame/tracker.h \
    inc/boxing/frame/trackergpf.h \
    inc/boxing/frame/trackergpf_1.h

boxinggraphicsincludedir = $(includedir)/boxing/graphics
boxinggraphicsinclude_HEADERS = \
	inc/boxing/graphics/painter.h \
    inc/boxing/graphics/component.h \
    inc/boxing/graphics/image8paintdevice.h \
    inc/boxing/graphics/referencepoint.h \
    inc/boxing/graphics/genericframefactory.h \
    inc/boxing/graphics/genericframe.h \
    inc/boxing/graphics/referencebar.h \
    inc/boxing/graphics/label.h \
    inc/boxing/graphics/paintdevice.h \
    inc/boxing/graphics/border.h \
    inc/boxing/graphics/metadatabar.h \
    inc/boxing/graphics/calibrationbar.h \
    inc/boxing/graphics/contentcontainer.h \
    inc/boxing/graphics/genericframegpf_1.h

include_HEADERS = \
    thirdparty/reedsolomon/rs.h \
    thirdparty/reedsolomon/galois_field.h \
    thirdparty/LDPC-codes/alloc.h \
    thirdparty/LDPC-codes/check.h \
    thirdparty/LDPC-codes/dec.h \
    thirdparty/LDPC-codes/distrib.h \
    thirdparty/LDPC-codes/enc.h \
    thirdparty/LDPC-codes/mod2convert.h \
    thirdparty/LDPC-codes/mod2dense.h \
    thirdparty/LDPC-codes/mod2sparse.h \
    thirdparty/LDPC-codes/rand.h \
    thirdparty/LDPC-codes/rcode.h \
    thirdparty/glib/glib.h \
    thirdparty/glib/ghash.h \
    thirdparty/glib/gvector.h \
    thirdparty/glib/glibconfig.h \
    thirdparty/glib/gtree.h \
    thirdparty/glib/gmacros.h \
    thirdparty/glib/gnode.h \
    thirdparty/glib/glist.h \
    thirdparty/glib/g_variant.h \
    thirdparty/glib/gutils.h \
    thirdparty/glib/gversionmacros.h \
    thirdparty/glib/gtypes.h 

EXTRA_DIST = README.org doc autogen.sh

# Create documentation
README.md : README.org
	emacs README.org --batch -f org-md-export-to-markdown

doc : src doxygen.dox
	doxygen ${top_srcdir}/doxygen.dox

dist_doc_DATA = README.md doxygen.dox

clean-local:
	rm -rf doc

# Clean files generated by doxygen:
DISTCLEANFILES = unboxingdata.tag
