
lib_LIBRARIES = libunboxing.a
libunboxing_a_CFLAGS = \
    -I${top_srcdir}/inc \
    -I${top_srcdir}/thirdparty/glib \
    -I${top_srcdir}/thirdparty/LDPC-codes \
    -I${top_srcdir}/thirdparty/bch \
    -I${top_srcdir}/./thirdparty/reedsolomon \
    -I${top_srcdir}/src/unboxer \
    -I${top_srcdir}/src/frame \
    -I${top_srcdir}/../boxingdata/inc \
    -D RAND_FILE="\"./randfile\""

libunboxing_a_SOURCES = \
    ../thirdparty/reedsolomon/rs.c \
    ../thirdparty/reedsolomon/galois_field.c \
    ../thirdparty/LDPC-codes/alloc.c \
    ../thirdparty/LDPC-codes/check.c \
    ../thirdparty/LDPC-codes/dec.c \
    ../thirdparty/LDPC-codes/distrib.c \
    ../thirdparty/LDPC-codes/enc.c \
    ../thirdparty/LDPC-codes/intio.c \
    ../thirdparty/LDPC-codes/mod2convert.c \
    ../thirdparty/LDPC-codes/mod2dense.c \
    ../thirdparty/LDPC-codes/mod2sparse.c \
    ../thirdparty/LDPC-codes/open.c \
    ../thirdparty/LDPC-codes/rand.c \
    ../thirdparty/LDPC-codes/rcode.c \
    ../thirdparty/glib/gnode.c \
    ../thirdparty/glib/ghash.c \
    ../thirdparty/glib/g_variant.c \
    ../thirdparty/glib/gtree.c \
    ../thirdparty/glib/glist.c \
    ../thirdparty/glib/gvector.c \
    ../thirdparty/glib/gutils.c \
    ../thirdparty/bch/bch.c \
    log.c \
    unboxer.c \
    unboxer_utility.c \
    string.c \
    matrix.c \
    math/bitutils.c \
    math/dsp.c \
    math/math.c \
    codecs/codecbase.c \
    codecs/packetheader.c \
    codecs/reedsolomon.c \
    codecs/interleaving.c \
    codecs/bchcodec.c \
    codecs/ftfinterleaving.c \
    codecs/crc32.c \
    codecs/codecdispatcher.c \
    codecs/2dpam.c \
    codecs/cipher.c \
    codecs/ldpccodec.c \
    codecs/syncpointinserter.c \
    codecs/symbolconverter.c \
    codecs/modulator.c \
    codecs/crc64.c \
    metadata.c \
    stats.c \
    utils.c \
    image8.c \
    unboxer/unboxerv1.c \
    unboxer/unboxerv1.h \
    unboxer/horizontalmeasures.c \
    unboxer/datapoints.c \
    unboxer/histogramutils.c \
    unboxer/frametrackerutil.c \
    unboxer/sampleutil.c \
    unboxer/filter.c \
    unboxer/frameutil.c \
    unboxer/cornermark.c \
    unboxer/syncpoints.c \
    base/math_crc64.c \
    base/math_crc32.c \
    platform/memory.c \
    platform/platform.c \
    frame/trackergpf_1.c \
    frame/bilinearsampler.c \
    frame/sampler.c \
    frame/areasampler.c \
    frame/bicubicsampler.c \
    frame/trackergpf.c \
    frame/2polinomialsampler.c \
    graphics/contentcontainer.c \
    graphics/genericframefactory.c \
    graphics/border.c \
    graphics/referencepoint.c \
    graphics/image8paintdevice.c \
    graphics/component.c \
    graphics/metadatabar.c \
    graphics/calibrationbar.c \
    graphics/painter.c \
    graphics/referencebar.c \
    graphics/genericframe.c \
    graphics/label.c \
    graphics/genericframegpf_1.c \
    config.c \
    globals.c

libunboxing_a_SOURCES += \
	../thirdparty/bch/bch.h \
    unboxer/horizontalmeasures.h \
    unboxer/frameutil.h \
    unboxer/datapoints.h \
    base/config.h \
    frame/bilinearsampler.h \
    frame/bicubicsampler.h \
    frame/areasampler.h \
    frame/2polinomialsampler.h 
